# cyclotron.analysis

./: README.md  cyclotron_analysis.ipynb  pyproject.toml
docs/source/: conf.py  fields.rst  index.rst  model.rst  ops.cyclotron.analysis.fields.rst  ops.cyclotron.analysis.model.rst
ops/cyclotron/analysis/: exceptions.py
ops/cyclotron/analysis/fields/: __init__.py  synchronous_field.py
ops/cyclotron/analysis/fields/interpolators/: __init__.py  field_interpolator.py  gaussian_process.py  spline.py  spline_field_interpolator.py
ops/cyclotron/analysis/io/: main_field.py  trim_coils.py
ops/cyclotron/analysis/model/: __init__.py  beam.py  magnetic_field.py  trim_coil.py
ops/cyclotron/analysis/orbits/: __init__.py  equilibrium_orbits.py  orbit_model.py
ops/cyclotron/analysis/physics/: __init__.py  beam_properties.py  field_properties.py
ops/cyclotron/analysis/trim_coils/: current_limits.py  solve_coil_currents.py
