[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecris.analysis"
description = "Analysis tools for cyclotron operations."
requires-python = ">=3.9"
authors = [
    {name = "Jessica Rehak", email = "rehak@lbl.gov"}
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = [""]          
include = ["cyclotron.analysis*"]
exclude = ["tests*"]    

[tool.setuptools.dynamic]
version = {attr = "cyclotron.analysis.__version__"}