[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops.cyclotron.analysis"
description = "Analysis tools for cyclotron operations."
requires-python = ">=3.9"
authors = [
    {name = "Jessica Rehak", email = "rehak@lbl.gov"}
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
where = [""]          
include = ["ops.cyclotron.analysis*"]
exclude = ["tests*"]    

[tool.setuptools.dynamic]
version = {attr = "ops.cyclotron.analysis.__version__"}